--- a/reviews.html
+++ b/reviews.html
@@ -1,1 +1,26 @@
+!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="stylesheet.css" type="text/css" />
+<title>Diamond Sweets</title>
+<body>
+<center>
+<div class="title">
+<h1>Diamond <br>Sweets</h1>
+</div>
+<div class="navigation">
+<ul>
+  <li><a href="\\SD36\ENVR\StudentHome\e.aujla\Desktop\Index\home.html">Home</a></li>
+  <li><a href="\\SD36\ENVR\StudentHome\e.aujla\Desktop\Index\menu.html">Menu</a></li>
+  <li><a href="\\SD36\ENVR\StudentHome\e.aujla\Desktop\Index\location.html">Location</a></li>
+  <li><a href="\\SD36\ENVR\StudentHome\e.aujla\Desktop\Index\contactus.html">Contact</a></li>
+  <li><a href="\\SD36\ENVR\StudentHome\e.aujla\Desktop\Index\reviews.html">Reviews</a></li>
+</ul> 
+<h1> Reviews from some of our customers! </h1>
+<span class="yelp-review" data-review-id="DZBtyTJwIDXUc5oyxAFuvw" data-hostname="www.yelp.ca">Read <a href="https://www.yelp.com/user_details?userid=yDf2xJ0MWSMg8dmJzILDXg" rel="nofollow noopener">Heather S.</a>'s <a href="https://www.yelp.ca/biz/diamond-sweets-and-restaurant-surrey?hrid=DZBtyTJwIDXUc5oyxAFuvw" rel="nofollow noopener">review</a> of <a href="https://www.yelp.com/biz/-rP1vm6dIbAGxfVo1SmymQ" rel="nofollow noopener">Diamond Sweets & Restaurant</a> on <a href="https://www.yelp.ca" rel="nofollow noopener">Yelp</a><script async="async" src="https://www.yelp.ca/embed/widgets.js" type="text/javascript"></script></span>
+<span class="yelp-review" data-review-id="FTOJ3NURaxkUC3l034M9HQ" data-hostname="www.yelp.ca">Read <a href="https://www.yelp.com/user_details?userid=83RZ6ZL29nxMKWuBu8JZRw" rel="nofollow noopener">Jennifer B.</a>'s <a href="https://www.yelp.ca/biz/diamond-sweets-and-restaurant-surrey?hrid=FTOJ3NURaxkUC3l034M9HQ" rel="nofollow noopener">review</a> of <a href="https://www.yelp.com/biz/-rP1vm6dIbAGxfVo1SmymQ" rel="nofollow noopener">Diamond Sweets & Restaurant</a> on <a href="https://www.yelp.ca" rel="nofollow noopener">Yelp</a><script async="async" src="https://www.yelp.ca/embed/widgets.js" type="text/javascript"></script></span>
+<span class="yelp-review" data-review-id="9eyfIxZaCL4JnZHGz3jlQw" data-hostname="www.yelp.ca">Read <a href="https://www.yelp.com/user_details?userid=vKWGWJK0tM3iWqycmRhn2Q" rel="nofollow noopener">Naved H.</a>'s <a href="https://www.yelp.ca/biz/diamond-sweets-and-restaurant-surrey?hrid=9eyfIxZaCL4JnZHGz3jlQw" rel="nofollow noopener">review</a> of <a href="https://www.yelp.com/biz/-rP1vm6dIbAGxfVo1SmymQ" rel="nofollow noopener">Diamond Sweets & Restaurant</a> on <a href="https://www.yelp.ca" rel="nofollow noopener">Yelp</a><script async="async" src="https://www.yelp.ca/embed/widgets.js" type="text/javascript"></script></span>
+</center>
+</body>
+</html>`
 
