--- a/menu.html
+++ b/menu.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="stylesheet.css" type="text/css" />
+<title>Diamond Sweets</title>
+<body>
+<center>
+<div class="title">
+<h1>Diamond <br>Sweets</h1>
+</div>
+<div class="navigation">
 
+ <ul>
+  <li><a href="\\SD36\ENVR\StudentHome\e.aujla\Desktop\Index\home.html">Home</a></li>
+  <li><a href="\\SD36\ENVR\StudentHome\e.aujla\Desktop\Index\menu.html">Menu</a></li>
+  <li><a href="\\SD36\ENVR\StudentHome\e.aujla\Desktop\Index\location.html">Location</a></li>
+  <li><a href="\\SD36\ENVR\StudentHome\e.aujla\Desktop\Index\contactus.html">Contact</a></li>
+  <li><a href="\\SD36\ENVR\StudentHome\e.aujla\Desktop\Index\reviews.html">Reviews</a></li>
+</ul> 
+
+</div>
+
+<img src="images/appeitzers2.png" >  
+<img src="images/lunch.png" > 
+<img src="images/dinner.png">
+<img src="images/drinks.png" >
+</center>
+</body>
+</html>`
