--- a/location.html
+++ b/location.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="stylesheet.css" type="text/css" />
+<title>Diamond Sweets</title>
+<body>
+<center>
+<div class="title">
+<h1>Diamond <br>Sweets</h1>
+</div>
+<div class="navigation">
+<ul>
+  <li><a href="\\SD36\ENVR\StudentHome\e.aujla\Desktop\Index\home.html">Home</a></li>
+  <li><a href="\\SD36\ENVR\StudentHome\e.aujla\Desktop\Index\menu.html">Menu</a></li>
+  <li><a href="\\SD36\ENVR\StudentHome\e.aujla\Desktop\Index\location.html">Location</a></li>
+  <li><a href="\\SD36\ENVR\StudentHome\e.aujla\Desktop\Index\contactus.html">Contact</a></li>
+  <li><a href="\\SD36\ENVR\StudentHome\e.aujla\Desktop\Index\reviews.html">Reviews</a></li>
+</ul> 
+</div>
+
+<img src="images/diamond on langley.png" height="400" width="500">  
+<img src="images/diamond on 120.png" height="400" width="600"> 
+<img src="images/diamond on fraser.png" height="400" width="500">
+<img src="images/diamond on cloverdale.png" height="400" width="500">
+</center>
+</body>
+</html>`
 
