--- a/home.html
+++ b/home.html
@@ -1,1 +1,29 @@
+<html>
+<head>
+<link rel="stylesheet" href="stylesheet.css" type="text/css" />
+<title>Diamond Sweets</title>
+<body>
+<center>
+<div class="title">
+<h1>Diamond <br>Sweets</h1>
+</div>
+<div class="navigation">
+<ul>
+  <li><a href="\\SD36\ENVR\StudentHome\e.aujla\Desktop\Index\home.html">Home</a></li>
+  <li><a href="\\SD36\ENVR\StudentHome\e.aujla\Desktop\Index\menu.html">Menu</a></li>
+  <li><a href="\\SD36\ENVR\StudentHome\e.aujla\Desktop\Index\location.html">Location</a></li>
+  <li><a href="\\SD36\ENVR\StudentHome\e.aujla\Desktop\Index\contactus.html">Contact</a></li>
+  <li><a href="\\SD36\ENVR\StudentHome\e.aujla\Desktop\Index\reviews.html">Reviews</a></li>
+</ul> 
+</div>
+<p>Diamond Sweets & Restaurant serves up a delicious array of savory and sweet dishes at our Indian restaurant in Langley, BC.
+
+If you are looking for a sumptuous and flavorful meal, you can't go wrong with Diamond Sweets & Restaurant. The tastes of Indian food are rich and complex, varying from syrup-soaked desserts like gulab jamun and subtly spiced breads like pappadam to delicious butter chicken, malai kofta, and biryani. Our Indian restaurant's menu features the full breadth of these delights with wonderful lunch, dinner, and dessert options. Dine-in guests can enjoy our restaurant's casual and welcoming environment while time-pressed visitors will appreciate our prompt take-out service. Stop in and embrace the flavors of the subcontinent at our Indian restaurant in Langley, BC.
+</p>
+<img src="images/diamond sweets.jpeg" height="400" width="500">  
+<img src="images/diamond food.jpg" height="400" width="600"> <br>
+Made by Erveen Aujla
+</center>
+</body>
+</html>`
 
