--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-<link rel="stylesheet" href="stylesheet.css" type="text/css" />
+<link rel="stylesheet" href="/css/style.css" type="text/css" />
 <title>Diamond Sweets</title>
 <body>
 <center>
