--- a/home.html
+++ b/home.html
@@ -11,11 +11,11 @@
 </div>
 <div class="navigation">
 <ul>
-  <li><a href="\\SD36\ENVR\StudentHome\e.aujla\Desktop\Index\home.html">Home</a></li>
-  <li><a href="\\SD36\ENVR\StudentHome\e.aujla\Desktop\Index\menu.html">Menu</a></li>
-  <li><a href="\\SD36\ENVR\StudentHome\e.aujla\Desktop\Index\location.html">Location</a></li>
-  <li><a href="\\SD36\ENVR\StudentHome\e.aujla\Desktop\Index\contactus.html">Contact</a></li>
-  <li><a href="\\SD36\ENVR\StudentHome\e.aujla\Desktop\Index\reviews.html">Reviews</a></li>
+  <li><a href="/home.html">Home</a></li>
+  <li><a href="/menu.html">Menu</a></li>
+  <li><a href="/location.html">Location</a></li>
+  <li><a href="/contactus.html">Contact</a></li>
+  <li><a href="/reviews.html">Reviews</a></li>
 </ul> 
 </div>
 <p>Diamond Sweets & Restaurant serves up a delicious array of savory and sweet dishes at our Indian restaurant in Langley, BC.
