--- a/menu.html
+++ b/menu.html
@@ -11,11 +11,11 @@
 <div class="navigation">
 
  <ul>
-  <li><a href="home.html">Home</a></li>
-  <li><a href="menu.html">Menu</a></li>
-  <li><a href="location.html">Location</a></li>
-  <li><a href="contactus.html">Contact</a></li> 
-  <li><a href="reviews.html">Reviews</a></li>
+  <li><a href="/home.html">Home</a></li>
+  <li><a href="/menu.html">Menu</a></li>
+  <li><a href="/location.html">Location</a></li>
+  <li><a href="/contactus.html">Contact</a></li> 
+  <li><a href="/reviews.html">Reviews</a></li>
 </ul> 
 
 </div>
