--- a/reviews.html
+++ b/reviews.html
@@ -10,11 +10,11 @@
 </div>
 <div class="navigation">
 <ul>
-  <li><a href="home.html">Home</a></li>
-  <li><a href="menu.html">Menu</a></li>
-  <li><a href="location.html">Location</a></li>
-  <li><a href="contactus.html">Contact</a></li>
-  <li><a href="reviews.html">Reviews</a></li>
+  <li><a href="/home.html">Home</a></li>
+  <li><a href="/menu.html">Menu</a></li>
+  <li><a href="/location.html">Location</a></li>
+  <li><a href="/contactus.html">Contact</a></li>
+  <li><a href="/reviews.html">Reviews</a></li>
 </ul> 
 <h1> Reviews from some of our customers! </h1>
 <span class="yelp-review" data-review-id="DZBtyTJwIDXUc5oyxAFuvw" data-hostname="www.yelp.ca">Read <a href="https://www.yelp.com/user_details?userid=yDf2xJ0MWSMg8dmJzILDXg" rel="nofollow noopener">Heather S.</a>'s <a href="https://www.yelp.ca/biz/diamond-sweets-and-restaurant-surrey?hrid=DZBtyTJwIDXUc5oyxAFuvw" rel="nofollow noopener">review</a> of <a href="https://www.yelp.com/biz/-rP1vm6dIbAGxfVo1SmymQ" rel="nofollow noopener">Diamond Sweets & Restaurant</a> on <a href="https://www.yelp.ca" rel="nofollow noopener">Yelp</a><script async="async" src="https://www.yelp.ca/embed/widgets.js" type="text/javascript"></script></span>
