--- a/game.html
+++ b/game.html
@@ -45,7 +45,7 @@
         function init() {
           canvas = document.getElementById("canvas");
           ctx = canvas.getContext("2d");
-          img.src = "http://html5.litten.com/images/maze.gif";
+          img.src = "maze.gif";
           return setInterval(draw, 10);
         }
 
